version/0.6/_sources/examples/00-basic/index.rst.txt


.. _sphx_glr_examples_00-basic:

.. _basic-gallery:

Basic DPF examples
==================
These examples explain the basic concepts of DPF.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="If you have Ansys 2021 R1 installed, starting DPF is quite easy as DPF-Core takes care of launc...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_00-basic_example_thumb.png
    :alt: Basic DPF-Core usage

  :ref:`sphx_glr_examples_00-basic_00-basic_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic DPF-Core usage</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In DPF, operators provide the primary method for interacting with and extracting results. Withi...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_01-basic_operators_thumb.png
    :alt: Operators overview

  :ref:`sphx_glr_examples_00-basic_01-basic_operators.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Operators overview</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Because field data is always associated to its scoping and support, the field is a self-describ...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_02-basic_field_containers_thumb.png
    :alt: Field and field containers overview

  :ref:`sphx_glr_examples_00-basic_02-basic_field_containers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Field and field containers overview</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Import necessary modules:">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_03-create_entities_thumb.png
    :alt: Create your own entities using DPF operators

  :ref:`sphx_glr_examples_00-basic_03-create_entities.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create your own entities using DPF operators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to write and upload files on the server machine and then download them b...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_04-basic-load-file_thumb.png
    :alt: Working with a result file

  :ref:`sphx_glr_examples_00-basic_04-basic-load-file.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Working with a result file</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Import necessary modules:">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_05-use_local_data_thumb.png
    :alt: Bring a field's data locally to improve performance

  :ref:`sphx_glr_examples_00-basic_05-use_local_data.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bring a field's data locally to improve performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Load plugin">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_06-load_plugin_thumb.png
    :alt: Load plugin

  :ref:`sphx_glr_examples_00-basic_06-load_plugin.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Load plugin</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Import necessary modules:">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_07-use_result_helpers_thumb.png
    :alt: Use result helpers to load custom data

  :ref:`sphx_glr_examples_00-basic_07-use_result_helpers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use result helpers to load custom data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Import necessary modules:">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_08-results_over_time_subset_thumb.png
    :alt: Scope results over custom time domains

  :ref:`sphx_glr_examples_00-basic_08-results_over_time_subset.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scope results over custom time domains</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Import necessary modules:">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_09-results_over_space_subset_thumb.png
    :alt: Scope results over custom space domains

  :ref:`sphx_glr_examples_00-basic_09-results_over_space_subset.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scope results over custom space domains</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="- ansys.dpf.core.server_types.InProcessServer loading DPF in process.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_11-server_types_thumb.png
    :alt: Communicate in process or via gRPC

  :ref:`sphx_glr_examples_00-basic_11-server_types.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Communicate in process or via gRPC</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Import necessary modules:">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_12-get_material_properties_thumb.png
    :alt: Get material properties from the result file

  :ref:`sphx_glr_examples_00-basic_12-get_material_properties.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get material properties from the result file</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The script below demonstrates the methodology using PyDPF.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_13-nodes_in_local_coordinate_system_thumb.png
    :alt: Convert nodal coordinates field to local coordinate system

  :ref:`sphx_glr_examples_00-basic_13-nodes_in_local_coordinate_system.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Convert nodal coordinates field to local coordinate system</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/00-basic/00-basic_example
   /examples/00-basic/01-basic_operators
   /examples/00-basic/02-basic_field_containers
   /examples/00-basic/03-create_entities
   /examples/00-basic/04-basic-load-file
   /examples/00-basic/05-use_local_data
   /examples/00-basic/06-load_plugin
   /examples/00-basic/07-use_result_helpers
   /examples/00-basic/08-results_over_time_subset
   /examples/00-basic/09-results_over_space_subset
   /examples/00-basic/11-server_types
   /examples/00-basic/12-get_material_properties
   /examples/00-basic/13-nodes_in_local_coordinate_system

